# Steam-Recommender

./: .gitignore  README.md  app.py  config.py  database.py  games.db.bak  pyproject.toml  recommender.py  sync.py
static/: style.css
templates/: index.html
